<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#121212">

    <Space
        android:layout_width="match_parent"
        android:layout_height="64dp" />

    <TextView
        android:id="@+id/textCondition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/selected_target_standard_baseline"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonOpenSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_settings"
        android:layout_marginBottom="12dp"/>

    <!-- OPTIMIZED REPORT CARD DISPLAY PANEL -->
    <TextView
        android:id="@+id/textExplanation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:typeface="monospace"
        android:gravity="start|center_vertical"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textSize="14sp"/>

    <CheckBox
        android:id="@+id/checkDisplayFullContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_full_container_values_txt"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginBottom="12dp"/>

    <Button
        android:id="@+id/buttonScan"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/take_picture"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="64dp"/>

</LinearLayout>